--- a/public/quiz.html
+++ b/public/quiz.html
@@ -38,7 +38,7 @@
 <body>
 <div class="box">
   <h1>AI Revision Quiz</h1>
-  <div class="meta">Generate questions from selected PDF pages. Add more anytime without restarting.</div>
+  <div class="meta">Generate questions from selected PDF pages. Click reset to use another PDF.</div>
 
   <div class="card">
     <div class="row">
@@ -369,3 +369,4 @@ if(BANK.length){
 </script>
 </body>
 </html>
+
