--- a/public/quiz.html
+++ b/public/quiz.html
@@ -54,7 +54,7 @@
 <body>
 <div class="box">
   <h1>AI Revision Quiz</h1>
-  <div class="meta">Generate questions from selected PDF pages. CLick rest to use another PDF.</div>
+  <div class="meta">Generate questions from selected PDF pages. Click reset to use another PDF.</div>
 
   <div class="card">
     <div class="row">
@@ -455,3 +455,4 @@ if(BANK.length){
 </script>
 </body>
 </html>
+
