--- a/public/quiz.html
+++ b/public/quiz.html
@@ -18,9 +18,11 @@
     button:disabled { opacity:.5; cursor:not-allowed; }
     input[type="file"], input[type="number"], select { padding:8px; border-radius:10px; border:0; }
     input[type="number"] { width: 90px; }
+
     .status { margin-top:12px; padding:10px; border-radius:10px; background:rgba(255,255,255,.08); }
     .status.ok { background:rgba(56,211,159,.15); }
     .status.bad { background:rgba(255,107,107,.15); }
+
     .card { margin-top:14px; padding:14px; border-radius:12px; background:rgba(255,255,255,.06); }
     .grid { display:grid; grid-template-columns:1fr 300px; gap:14px; }
     @media (max-width:900px){ .grid{grid-template-columns:1fr;} }
@@ -46,7 +48,7 @@
 
     /* Highlight states after Check */
     .opt-correct { border-color: rgba(56,211,159,.9); background: rgba(56,211,159,.18) !important; }
-    .opt-wrong { border-color: rgba(255,107,107,.9); background: rgba(255,107,107,.15) !important; }
+    .opt-wrong   { border-color: rgba(255,107,107,.9); background: rgba(255,107,107,.15) !important; }
     .opt-dim { opacity: .8; }
   </style>
 </head>
@@ -54,7 +56,7 @@
 <body>
 <div class="box">
   <h1>AI Revision Quiz</h1>
-  <div class="meta">Generate questions from selected PDF pages. Click reset to use another PDF.</div>
+  <div class="meta">Generate questions from selected PDF pages. Add more anytime without restarting.</div>
 
   <div class="card">
     <div class="row">
@@ -105,28 +107,62 @@
 </div>
 
 <script>
-const SESSION = "quiz_v5_pdfonly_shortjump";
-let BANK = JSON.parse(localStorage.getItem(SESSION+"_bank")||"[]");
-let state = JSON.parse(localStorage.getItem(SESSION+"_state")||
-  '{"pos":0,"answers":{},"mode":"all"}');
+/* =======================
+   Storage + Server Session
+   ======================= */
+const SESSION = "quiz_stable_v1";
+const LS_BANK = SESSION + "_bank";
+const LS_STATE = SESSION + "_state";
+const LS_SERVER_SID = SESSION + "_server_session_id";
 
-const $ = id => document.getElementById(id);
+let BANK = JSON.parse(localStorage.getItem(LS_BANK) || "[]");
+let state = JSON.parse(localStorage.getItem(LS_STATE) || '{"pos":0,"answers":{},"mode":"all"}');
 
-function save(){
-  localStorage.setItem(SESSION+"_bank",JSON.stringify(BANK));
-  localStorage.setItem(SESSION+"_state",JSON.stringify(state));
+const $ = (id) => document.getElementById(id);
+
+function saveBrowserState(){
+  localStorage.setItem(LS_BANK, JSON.stringify(BANK));
+  localStorage.setItem(LS_STATE, JSON.stringify(state));
+}
+function clearBrowserState(){
+  localStorage.removeItem(LS_BANK);
+  localStorage.removeItem(LS_STATE);
+  BANK = [];
+  state = { pos: 0, answers: {}, mode: "all" };
 }
 
-function queue(){
-  return BANK.map((_,i)=>i).filter(i=>{
-    if(state.mode==="incorrect") return state.answers[i]?.correct===false;
-    return true;
-  });
+function newSessionId(){
+  return "sid_" + Math.random().toString(16).slice(2) + "_" + Date.now();
+}
+function getServerSessionId(){
+  let sid = localStorage.getItem(LS_SERVER_SID);
+  if(!sid){
+    sid = newSessionId();
+    localStorage.setItem(LS_SERVER_SID, sid);
+  }
+  return sid;
+}
+function setServerSessionId(sid){
+  localStorage.setItem(LS_SERVER_SID, sid);
+}
+function rotateServerSessionId(){
+  localStorage.removeItem(LS_SERVER_SID);
+  setServerSessionId(newSessionId());
 }
 
+/* =======================
+   Helpers
+   ======================= */
 function setStatus(msg, type=""){
   $("status").textContent = msg;
   $("status").className = "status " + type;
+}
+
+function queue(){
+  return BANK.map((_, i) => i).filter(i => {
+    if(state.mode === "incorrect") return state.answers[i]?.correct === false;
+    return true;
+  });
 }
 
 function clearHighlights(){
@@ -141,34 +177,36 @@ function applyHighlights(idxInBank){
 
   document.querySelectorAll("#options label").forEach(lab => {
     const inp = lab.querySelector("input");
-    if (!inp) return;
+    if(!inp) return;
 
     const val = inp.value;
     lab.classList.add("opt-dim");
 
-    if (val === correct) {
+    if(val === correct){
       lab.classList.remove("opt-dim");
       lab.classList.add("opt-correct");
     }
-    if (selected && selected !== correct && val === selected) {
+    if(selected && selected !== correct && val === selected){
       lab.classList.remove("opt-dim");
       lab.classList.add("opt-wrong");
     }
   });
 }
 
-/* SHORT JUMP LIST: show only 5 before + current + 5 after */
+/* =======================
+   UI Render
+   ======================= */
 function renderJump(){
   const q = queue();
   const list = $("jumpList");
   list.innerHTML = "";
-  if (!q.length) return;
+  if(!q.length) return;
 
   const WINDOW = 5;
   const start = Math.max(0, state.pos - WINDOW);
   const end = Math.min(q.length - 1, state.pos + WINDOW);
 
-  if (start > 0) {
+  if(start > 0){
     const more = document.createElement("div");
     more.className = "tiny";
     more.style.padding = "8px 10px";
@@ -176,7 +214,7 @@ function renderJump(){
     list.appendChild(more);
   }
 
-  for (let p = start; p <= end; p++) {
+  for(let p = start; p <= end; p++){
     const bi = q[p];
     const b = document.createElement("button");
 
@@ -185,18 +223,18 @@ function renderJump(){
       : "⬜ ";
 
     b.textContent = `${mark}Q${bi + 1}`;
-    if (p === state.pos) b.classList.add("active");
+    if(p === state.pos) b.classList.add("active");
 
     b.onclick = () => {
       state.pos = p;
-      save();
+      saveBrowserState();
       renderQuestion();
     };
 
     list.appendChild(b);
   }
 
-  if (end < q.length - 1) {
+  if(end < q.length - 1){
     const more = document.createElement("div");
     more.className = "tiny";
     more.style.padding = "8px 10px";
@@ -208,10 +246,10 @@ function renderJump(){
 function renderQuestion(){
   const q = queue();
   if(!q.length){
-    $("quizGrid").style.display="none";
+    $("quizGrid").style.display = "none";
     return;
   }
-  $("quizGrid").style.display="grid";
+  $("quizGrid").style.display = "grid";
 
   if(state.pos < 0) state.pos = 0;
   if(state.pos >= q.length) state.pos = q.length - 1;
@@ -219,26 +257,28 @@ function renderQuestion(){
   const idx = q[state.pos];
   const item = BANK[idx];
 
-  $("progress").textContent = `Mode: ${state.mode.toUpperCase()} • Q${idx+1} / ${BANK.length}`;
+  $("progress").textContent = `Mode: ${state.mode.toUpperCase()} • Q${idx + 1} / ${BANK.length}`;
   $("prompt").textContent = item.prompt;
 
-  $("options").innerHTML="";
+  $("options").innerHTML = "";
   const saved = state.answers[idx]?.selected;
 
-  ["A","B","C","D"].forEach(l=>{
-    const lab=document.createElement("label");
+  ["A","B","C","D"].forEach(l => {
+    const lab = document.createElement("label");
     const opt = item.options?.[l] || "";
     lab.innerHTML =
-      `<input type="radio" name="ans" value="${l}" ${saved===l?"checked":""}>
+      `<input type="radio" name="ans" value="${l}" ${saved === l ? "checked" : ""}>
        <b>${l})</b> ${opt}`;
     $("options").appendChild(lab);
   });
 
-  $("feedback").textContent="";
-  $("feedback").className="feedback";
-  $("nextBtn").disabled=true;
+  $("feedback").textContent = "";
+  $("feedback").className = "feedback";
+  $("nextBtn").disabled = true;
+  clearHighlights();
 
-  if (state.answers[idx]) {
+  // If already answered, show it
+  if(state.answers[idx]){
     const ok = state.answers[idx].correct;
     const correct = BANK[idx].answer;
     $("feedback").textContent = ok ? `Correct! (Answer: ${correct})` : `Wrong. Correct answer: ${correct}`;
@@ -248,10 +288,12 @@ function renderQuestion(){
   }
 
   renderJump();
-  save();
+  saveBrowserState();
 }
 
-// Generate questions
+/* =======================
+   Buttons
+   ======================= */
 $("getBtn").onclick = async () => {
   const f = $("pdfFile").files[0];
   if(!f){
@@ -262,7 +304,6 @@ $("getBtn").onclick = async () => {
 
   const start = $("startPage").value;
   const end = $("endPage").value;
-
   if(!start || !end){
     setStatus("Please enter BOTH start and end page numbers.", "bad");
     alert("Please enter BOTH start and end page numbers.");
@@ -273,14 +314,14 @@ $("getBtn").onclick = async () => {
   setStatus("Generating… please wait.", "");
 
   const fd = new FormData();
-  fd.append("session_id", "sid_local");
+  fd.append("session_id", getServerSessionId());
   fd.append("pdf", f);
   fd.append("start_page", start);
   fd.append("end_page", end);
 
   try{
     const r = await fetch("/api/next-20", { method:"POST", body: fd });
-    const d = await r.json();
+    const d = await r.json().catch(() => ({}));
 
     if(!r.ok){
       setStatus(d.error || "Server error.", "bad");
@@ -289,12 +330,13 @@ $("getBtn").onclick = async () => {
     }
 
     BANK = d.mcq || BANK;
+
     setStatus(`Added ${d.added ?? 0} new questions. Total: ${BANK.length}`, "ok");
+    $("continueBtn").disabled = (BANK.length === 0);
+    $("exportPdfBtn").disabled = (BANK.length === 0);
+    if (BANK.length > 0) $("continueBtn").disabled = false;
 
-    $("continueBtn").disabled = BANK.length === 0;
-    $("exportPdfBtn").disabled = BANK.length === 0;
-
-    save();
+    saveBrowserState();
     renderQuestion();
 
   } catch(err){
@@ -305,23 +347,76 @@ $("getBtn").onclick = async () => {
   }
 };
 
-$("continueBtn").onclick = () => renderQuestion();
+/* Continue: robust (handles empty Incorrect mode) */
+$("continueBtn").onclick = () => {
+  if (BANK.length === 0) {
+    setStatus("No questions yet. Upload a PDF and generate first.", "bad");
+    return;
+  }
 
-$("resetBtn").onclick = () => {
-  BANK = [];
-  state = {pos:0, answers:{}, mode:"all"};
-  save();
-  location.reload();
+  // If user is in incorrect mode but nothing is incorrect yet, switch to all.
+  if (queue().length === 0) {
+    state.mode = "all";
+    $("mode").value = "all";
+    state.pos = 0;
+    saveBrowserState();
+  }
+
+  renderQuestion();
+
+  const grid = $("quizGrid");
+  if (grid && grid.style.display !== "none") {
+    grid.scrollIntoView({ behavior: "smooth", block: "start" });
+  }
+};
+
+$("resetBtn").onclick = async () => {
+  // disable to avoid double-click
+  $("getBtn").disabled = true;
+  $("continueBtn").disabled = true;
+  $("exportPdfBtn").disabled = true;
+
+  setStatus("Resetting…", "");
+
+  // Best-effort server reset of the old session id
+  try{
+    const sid = getServerSessionId();
+    const fd = new FormData();
+    fd.append("session_id", sid);
+    await fetch("/api/reset", { method:"POST", body: fd });
+  } catch (e){
+    console.warn("Server /api/reset not available or failed (ok):", e);
+  }
+
+  // Clear browser state
+  clearBrowserState();
+
+  // Force fresh server session id for next PDF (prevents “wrong PDF” message)
+  rotateServerSessionId();
+
+  // Clear UI inputs
+  $("pdfFile").value = "";
+  $("startPage").value = "";
+  $("endPage").value = "";
+  $("mode").value = "all";
+  state.mode = "all";
+  state.pos = 0;
+
+  $("quizGrid").style.display = "none";
+  $("feedback").textContent = "";
+  $("feedback").className = "feedback";
+
+  $("getBtn").disabled = false;
+  setStatus("Reset complete. Upload a NEW PDF + page range to start afresh.", "ok");
 };
 
 $("mode").onchange = (e) => {
   state.mode = e.target.value;
   state.pos = 0;
-  save();
+  saveBrowserState();
   renderQuestion();
 };
 
-// Check (shows correct answer + highlights)
 $("checkBtn").onclick = () => {
   const sel = document.querySelector("input[name=ans]:checked");
   if(!sel) return alert("Select an option first.");
@@ -341,7 +436,7 @@ $("checkBtn").onclick = () => {
   clearHighlights();
   applyHighlights(idx);
 
-  save();
+  saveBrowserState();
   renderJump();
 };
 
@@ -351,14 +446,14 @@ $("nextBtn").onclick = () => {
 
   if(state.pos < q.length - 1){
     state.pos++;
-    save();
+    saveBrowserState();
     renderQuestion();
   } else {
     alert("End of this review mode. Switch mode or generate more questions.");
   }
 };
 
-// Keyboard shortcuts
+/* Keyboard shortcuts */
 window.addEventListener("keydown", (e) => {
   const tag = (e.target && e.target.tagName) ? e.target.tagName.toLowerCase() : "";
   if(tag === "input" || tag === "select" || tag === "textarea") return;
@@ -375,7 +470,7 @@ window.addEventListener("keydown", (e) => {
   }
 });
 
-// Export PDF
+/* Export PDF */
 $("exportPdfBtn").onclick = () => {
   const JsPDF = window.jspdf?.jsPDF;
   if(!JsPDF){
@@ -442,8 +537,12 @@ $("exportPdfBtn").onclick = () => {
   doc.save("ai-revision-quiz.pdf");
 };
 
-// Restore saved session
-$("mode").value = state.mode;
+/* Restore on load */
+$("mode").value = state.mode || "all";
+
+// ensure server sid exists (so it’s stable until Reset)
+getServerSessionId();
+
 if(BANK.length){
   $("continueBtn").disabled = false;
   $("exportPdfBtn").disabled = false;
@@ -455,4 +554,3 @@ if(BANK.length){
 </script>
 </body>
 </html>
-
